solved white space at bottom

--- a/anime/static/base.css
+++ b/anime/static/base.css
@@ -3,7 +3,13 @@
     margin: 0;
     padding: 0;
 }
-
+html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
 .navbar {
     /* background-color: antiquewhite; */
     display: flex;
@@ -19,7 +25,5 @@ html{
     background: linear-gradient(309deg, #000000, #2D3436);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
-    height: 100%;
     scroll-behavior: smooth;
 }
